// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Cover matches the snapshot 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  margin-right: 20px;
}

.c15 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
}

.c16 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
}

.c18 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  padding-top: 30px;
}

.c8 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 12px;
}

.c10 {
  padding-right: 20px;
  width: 60px;
}

.c17 {
  max-width: 100%;
}

.c12 {
  width: 32px;
  height: 32px;
}

.c13 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
}

.c4 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
}

.c6 {
  box-sizing: border-box;
  z-index: 1;
}

.c6 .c11 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

.c0 .c1,
.c0 .c3,
.c0 .c5 {
  position: absolute;
  width: 100%;
  height: 100%;
}

@media screen and (min-width:40em) {
  .c7 {
    padding-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c18 {
    font-size: 22px;
  }
}

@media screen and (min-width:52em) {
  .c18 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c18 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c18 {
    line-height: 32px;
  }
}

@media screen and (min-width:52em) {
  .c18 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c18 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c17 {
    max-width: 60%;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c3 c4"
  />
  <div
    className="c5 c6 c7"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c11 c12"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className=""
        >
          <div>
            <div
              className="c9"
            >
              <div
                className="c13 c14"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="c15"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="c16"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              Trevor Paglan
            </div>
          </div>
        </div>
      </div>
      <div
        className="c17"
      >
        <div
          className="c18"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          The elegant spiral of the Nautilus shell, the sinuous pattern of the banks of a river, or the swirling vortex street of clouds - patterns exist.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Video Cover matches the snapshot with edit props 1`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  margin-right: 20px;
}

.c15 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
}

.c16 {
  font-family: Unica77LLWebRegular,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 42px;
  line-height: 50px;
}

.c18 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
  padding-top: 30px;
}

.c8 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 12px;
}

.c10 {
  padding-right: 20px;
  width: 60px;
}

.c17 {
  max-width: 100%;
}

.c12 {
  width: 32px;
  height: 32px;
}

.c13 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  background: url(https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg) no-repeat center center;
  background-size: cover;
  background-color: black;
}

.c4 {
  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.6));
}

.c6 {
  box-sizing: border-box;
  z-index: 1;
}

.c6 .c11 {
  height: 60px;
  width: 44px;
  cursor: pointer;
}

.c0 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  color: white;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.25s ease,visibility 0.25s ease;
  transition: opacity 0.25s ease,visibility 0.25s ease;
}

.c0 .c1,
.c0 .c3,
.c0 .c5 {
  position: absolute;
  width: 100%;
  height: 100%;
}

@media screen and (min-width:40em) {
  .c7 {
    padding-bottom: 60px;
  }
}

@media screen and (min-width:40em) {
  .c18 {
    font-size: 22px;
  }
}

@media screen and (min-width:52em) {
  .c18 {
    font-size: 22px;
  }
}

@media screen and (min-width:64em) {
  .c18 {
    font-size: 22px;
  }
}

@media screen and (min-width:40em) {
  .c18 {
    line-height: 32px;
  }
}

@media screen and (min-width:52em) {
  .c18 {
    line-height: 32px;
  }
}

@media screen and (min-width:64em) {
  .c18 {
    line-height: 32px;
  }
}

@media screen and (min-width:40em) {
  .c17 {
    max-width: 60%;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    src="https://artsy-vanity-files-production.s3.amazonaws.com/images/galerie-ceysson-benetiere_abmb.jpg"
  />
  <div
    className="c3 c4"
  />
  <div
    className="c5 c6 c7"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
          onClick={[Function]}
          width="60px"
        >
          <svg
            className="c11 c12"
            version="1.1"
            viewBox="0 0 40 56"
            x="0px"
            xmlns="http://www.w3.org/2000/svg"
            y="0px"
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <polygon
                fill="white"
                points="0 0 0 56 39.3600006 28"
              />
            </g>
          </svg>
        </div>
        <div
          className=""
        >
          <div>
            <div
              className="c9"
            >
              <div
                className="c13 c14"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                Future of Art
              </div>
              <div
                className="c15"
                fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
                fontSize="14px"
              >
                02:28
              </div>
            </div>
            <div
              className="c16"
              fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
              fontSize="42px"
            >
              <div>
                Child 
                title
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c17"
      >
        <div
          className="c18"
          fontFamily="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
          fontSize={
            Array [
              "18px",
              "22px",
              "22px",
              "22px",
            ]
          }
        >
          <div>
            Child 
            description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
